--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,6 +26,8 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    compileSdkVersion 29
+    buildToolsVersion "29.0.0"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
