--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.23.0
+  firebase_auth: ^3.11.2
+  google_sign_in: ^5.4.2
+  font_awesome_flutter: ^10.2.1
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
