--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   google_sign_in: ^5.4.2
   font_awesome_flutter: ^10.2.1
   provider: ^6.0.3
+  flutter_map: ^3.0.0
+  latlong2: ^0.8.1
 
 dev_dependencies:
   flutter_test:
