--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.0.3
   flutter_map: ^3.0.0
   latlong2: ^0.8.1
+  cloud_firestore: ^3.5.1
 
 dev_dependencies:
   flutter_test:
