filters done, added images

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cloud_firestore: ^3.5.1
   geopoint: ^1.0.0
   flutter_map_marker_cluster: ^1.0.1
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
