--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   geopoint: ^1.0.0
   flutter_map_marker_cluster: ^1.0.1
   image_picker: ^0.8.6
+  geocoding: ^2.0.5
 
 dev_dependencies:
   flutter_test:
