--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,11 +56,18 @@ android {
         versionName flutterVersionName
     }
 
+    signingConfigs {
+		release {
+			keyAlias 'upload'
+			keyPassword 'Sign1234'
+			storeFile file('./../../upload-keystore.jks')
+			storePassword 'Sign1234'
+       }
+	}
+
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
